--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
 <header>
     <h1>Welcome to Gina's App!</h1>
 </header>
-
+<p>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a herf="contact.html">Contact</a>a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    
 <nav>
     <a href="index.html" class="button">Home</a>
     <a href="about.html" class="button">About</a>
