--- a/about.html
+++ b/about.html
@@ -1,24 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Gina's App</title>
+    <title>About Gina's App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f9fb;
+            background-color: #e6f2ff;
             color: #333;
             text-align: center;
-            padding-top: 100px;
+            padding: 50px;
+        }
+        h1 {
+            color: #0059b3;
+        }
+        p {
+            font-size: 18px;
+        }
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            color: #0059b3;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <h1>About Gina's App</h1>
-    <p>This app was created by Gina to empower and help people using simple and powerful tools.</p>
-    <p>Stay tuned for more updates!</p>
-    <a href="index.html">Back to Home</a>
+    <p>This app was built with passion and perseverance! It's designed to make your life easier and to inspire others that anything is possible.</p>
+    
+    <a href="index.html">← Back to Home</a>
 </body>
 </html>
