--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Gina's App</title>
+    <title>Contact Gina</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f9fb;
+            background-color: #fff5e6;
             color: #333;
             text-align: center;
-            padding-top: 100px;
+            padding: 50px;
+        }
+        h1 {
+            color: #e67300;
+        }
+        p {
+            font-size: 18px;
+        }
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            color: #e67300;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <h1>Contact Gina</h1>
-    <p>If you'd like to reach out, please email:</p>
-    <p><strong>integrity.with.gina@gmail.com</strong></p>
-    <a href="index.html">Back to Home</a>
+    <p>You can reach out by email or leave feedback here. More contact options will be available soon!</p>
+    
+    <a href="index.html">← Back to Home</a>
 </body>
 </html>
