--- a/about.html
+++ b/about.html
@@ -28,6 +28,12 @@
     </style>
 </head>
 <body>
+    <nav style="background-color: #333; padding: 15px;">
+  <a href="index.html" style="color: white; text-decoration: none; margin: 0 20px;">Home</a>
+  <a href="about.html" style="color: white; text-decoration: none; margin: 0 20px;">About</a>
+  <a href="contact.html" style="color: white; text-decoration: none; margin: 0 20px;">Contact</a>
+</nav>
+
     <h1>About Gina's App</h1>
     <p>This app was built with passion and perseverance! It's designed to make your life easier and to inspire others that anything is possible.</p>
     
