--- a/about.html
+++ b/about.html
@@ -10,33 +10,51 @@
             background-color: #e6f2ff;
             color: #333;
             text-align: center;
-            padding: 50px;
+            padding: 0;
+            margin: 0;
         }
-        h1 {
-            color: #0059b3;
+        nav {
+            background-color: #333;
+            padding: 15px;
         }
-        p {
-            font-size: 18px;
-        }
-        a {
-            display: inline-block;
-            margin-top: 20px;
+        nav a {
+            color: white;
             text-decoration: none;
-            color: #0059b3;
+            margin: 0 20px;
             font-weight: bold;
+        }
+        nav a:hover {
+            color: #ffcc00;
+        }
+        .content {
+            padding: 40px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <nav style="background-color: #333; padding: 15px;">
-  <a href="index.html" style="color: white; text-decoration: none; margin: 0 20px;">Home</a>
-  <a href="about.html" style="color: white; text-decoration: none; margin: 0 20px;">About</a>
-  <a href="contact.html" style="color: white; text-decoration: none; margin: 0 20px;">Contact</a>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
 </nav>
 
+<div class="content">
     <h1>About Gina's App</h1>
-    <p>This app was built with passion and perseverance! It's designed to make your life easier and to inspire others that anything is possible.</p>
-    
-    <a href="index.html">← Back to Home</a>
+    <p>This app was built with passion to make people's lives easier and inspire creativity!</p>
+</div>
+
+<footer>
+    © 2025 Gina Lopez. All rights reserved.
+</footer>
+
 </body>
 </html>
