--- a/contact.html
+++ b/contact.html
@@ -3,34 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Gina</title>
+    <title>About Gina's App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #fff5e6;
+            background-color: #e6f2ff;
             color: #333;
             text-align: center;
-            padding: 50px;
+            padding: 0;
+            margin: 0;
         }
-        h1 {
-            color: #e67300;
+        nav {
+            background-color: #333;
+            padding: 15px;
         }
-        p {
-            font-size: 18px;
-        }
-        a {
-            display: inline-block;
-            margin-top: 20px;
+        nav a {
+            color: white;
             text-decoration: none;
-            color: #e67300;
+            margin: 0 20px;
             font-weight: bold;
+        }
+        nav a:hover {
+            color: #ffcc00;
+        }
+        .content {
+            padding: 40px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <h1>Contact Gina</h1>
-    <p>You can reach out by email or leave feedback here. More contact options will be available soon!</p>
-    
-    <a href="index.html">← Back to Home</a>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="content">
+    <h1>About Gina's App</h1>
+    <p>This app was built with passion to make people's lives easier and inspire creativity!</p>
+</div>
+
+<footer>
+    © 2025 Gina Lopez. All rights reserved.
+</footer>
+
 </body>
 </html>
