--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Gina's App</title>
+    <title>Gina's App - Home</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #e6f2ff;
+            background-color: #f2f2f2;
             color: #333;
             text-align: center;
             padding: 0;
@@ -48,8 +48,8 @@
 </nav>
 
 <div class="content">
-    <h1>About Gina's App</h1>
-    <p>This app was built with passion to make people's lives easier and inspire creativity!</p>
+    <h1>Welcome to Gina's App!</h1>
+    <p>This is the official homepage of Gina's app. More amazing things coming soon!</p>
 </div>
 
 <footer>
