--- a/index.html
+++ b/index.html
@@ -1,89 +1,131 @@
-
+----- index.html -----
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gina's App - Welcome</title>
+    <title>Sovereign Academy - Home</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #e3f2fd;
-            color: #333;
-            text-align: center;
-            margin: 0;
-            padding: 0;
+        :root {
+            --primary-color: #2C3E50;   /* Royal Blue */
+            --secondary-color: #F4D03F; /* Light Gold */
+            --accent-color: #ECF0F1;    /* Soft White/Silver */
         }
-        header {
-            background-color: #2196F3;
-            color: white;
+
+        body {
+            background-color: var(--accent-color);
+            color: var(--primary-color);
+            font-family: Arial, sans-serif;
             padding: 20px;
         }
-        h1 {
-            margin: 0;
+
+        .navbar {
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            padding: 1rem;
+            font-size: 24px;
         }
-        nav {
-            margin: 20px 0;
-        }
+
         .button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 12px 24px;
-            margin: 10px;
-            border: none;
+            background-color: var(--secondary-color);
+            color: var(--primary-color);
+            padding: 10px 20px;
             border-radius: 5px;
-            text-decoration: none;
-            font-size: 16px;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        .content {
-            padding: 30px;
-        }
-        iframe {
-            margin-top: 30px;
-            border: 1px solid #ccc;
-        }
-        .logo {
-            width: 150px;
-            margin: 20px auto;
+            border: none;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
+    <div class="navbar">Sovereign Academy - Home</div>
+    <h1>Welcome to Sovereign Academy!</h1>
+    <p>This is the homepage.</p>
+    <button class="button">Learn More</button>
+</body>
+</html>
 
-    <nav style="background-color: #333; padding: 15px;">
-  <a href="index.html" style="color: white; text-decoration: none; margin: 0 20px;">Home</a>
-  <a href="about.html" style="color: white; text-decoration: none; margin: 0 20px;">About</a>
-  <a href="contact.html" style="color: white; text-decoration: none; margin: 0 20px;">Contact</a>
-</nav>
+----- about.html -----
+<!DOCTYPE html>
+<html>
+<head>
+    <title>About - Sovereign Academy</title>
+    <style>
+        :root {
+            --primary-color: #2C3E50;   /* Royal Blue */
+            --secondary-color: #F4D03F; /* Light Gold */
+            --accent-color: #ECF0F1;    /* Soft White/Silver */
+        }
 
-<header>
-    <h1>Welcome to Gina's App!</h1>
-</header>
-<p>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a herf="contact.html">Contact</a>a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    
-<nav>
-    <a href="index.html" class="button">Home</a>
-    <a href="about.html" class="button">About</a>
-    <a href="contact.html" class="button">Contact</a>
-</nav>
+        body {
+            background-color: var(--accent-color);
+            color: var(--primary-color);
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
 
-<div class="content">
-    <img src="https://via.placeholder.com/150" alt="Your Logo Here" class="logo">
-    <p>This is the official homepage of Gina's app, where powerful tools meet simplicity.</p>
+        .navbar {
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            padding: 1rem;
+            font-size: 24px;
+        }
 
-    <h2>My Embedded App</h2>
-    <iframe src="https://your-glide-app-link-here" width="80%" height="500px"></iframe>
+        .button {
+            background-color: var(--secondary-color);
+            color: var(--primary-color);
+            padding: 10px 20px;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div class="navbar">Sovereign Academy - About</div>
+    <h1>About Us</h1>
+    <p>Learn more about Sovereign Academy and our mission.</p>
+    <button class="button">Contact Us</button>
+</body>
+</html>
 
-    <p>More amazing things are coming soon. Stay tuned and check back often!</p>
-</div>
+----- contact.html -----
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Contact - Sovereign Academy</title>
+    <style>
+        :root {
+            --primary-color: #2C3E50;   /* Royal Blue */
+            --secondary-color: #F4D03F; /* Light Gold */
+            --accent-color: #ECF0F1;    /* Soft White/Silver */
+        }
 
+        body {
+            background-color: var(--accent-color);
+            color: var(--primary-color);
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        .navbar {
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            padding: 1rem;
+            font-size: 24px;
+        }
+
+        .button {
+            background-color: var(--secondary-color);
+            color: var(--primary-color);
+            padding: 10px 20px;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div class="navbar">Sovereign Academy - Contact</div>
+    <h1>Contact Us</h1>
+    <p>Get in touch with Sovereign Academy.</p>
+    <button class="button">Send Message</button>
 </body>
 </html>
