--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     <div class="navbar">Sovereign Academy - About</div>
     <h1>About Us</h1>
     <p>Learn more about Sovereign Academy and our mission.</p>
-    <button class="button">Contact Us</button>
+    <a href="about.html" class="button">Learn More</a>
+
 </body>
 </html>
 
