--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
     <div class="navbar">Sovereign Academy - Home</div>
     <h1>Welcome to Sovereign Academy!</h1>
     <p>This is the homepage.</p>
-    <button class="button">Learn More</button>
+    <a href="index.html" class="button">Back to Home</a>
+
 </body>
 </html>
 
