--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
             font-family: Arial, sans-serif;
             padding: 20px;
         }
+<img src="logo.png" alt="Sovereign Academy Logo" style="width: 150px;">
 
         .navbar {
             background-color: var(--primary-color);
