--- a/about.html
+++ b/about.html
@@ -82,6 +82,8 @@
 <body>
     <div class="navbar">Sovereign Academy - About</div>
     <h1>About Us</h1>
+    <p>At Sovereign Academy, we believe knowledge is power. Our mission is to provide valuable courses and resources that help people become self-reliant and successful. Join us and start your journey today.</p>
+
     <p>Learn more about Sovereign Academy and our mission.</p>
     <a href="contact.html" class="button">Contact Us</a>
 
