--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,8 @@
 <body>
     <div class="navbar">Sovereign Academy - About</div>
     <h1>About Us</h1>
+    <p>We would love to hear from you! Please reach out via email or visit us at our headquarters. Sovereign Academy is here to help you on your path to sovereignty and knowledge.</p>
+
     <p>Learn more about Sovereign Academy and our mission.</p>
     <button class="button">Contact Us</button>
 </body>
