--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             font-family: Arial, sans-serif;
             padding: 20px;
         }
+        <div class="navbar">
+    <a href="index.html" style="color: var(--secondary-color); margin-right: 20px;">Home</a>
+    <a href="about.html" style="color: var(--secondary-color); margin-right: 20px;">About</a>
+    <a href="contact.html" style="color: var(--secondary-color);">Contact</a>
+</div>
+
 <img src="logo.png" alt="Sovereign Academy Logo" style="width: 150px;">
 
         .navbar {
