--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     <p>This is the homepage.</p>
     <button class="button">Learn More</button>
 </body>
+    <footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
+    &copy; 2025 Sovereign Academy. All rights reserved.
+</footer>
+
 </html>
 
 ----- about.html -----
