--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,10 @@
     <a href="index.html" class="button">Back to Home</a>
 
 </body>
+ <footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
+    &copy; 2025 Sovereign Academy. All rights reserved.
+</footer>
+   
 </html>
 
 ----- about.html -----
