--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     <title>Sovereign Academy - Home</title>
+    <link rel="manifest" href="manifest.json">
+
     <style>
         :root {
             --primary-color: #2C3E50;   /* Royal Blue */
