--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,15 @@
             font-family: Arial, sans-serif;
             padding: 20px;
         }
-        <div class="navbar">
+<div class="navbar">
     <a href="index.html" style="color: var(--secondary-color); margin-right: 20px;">Home</a>
     <a href="about.html" style="color: var(--secondary-color); margin-right: 20px;">About</a>
-    <a href="contact.html" style="color: var(--secondary-color);">Contact</a>
+    <a href="contact.html" style="color: var(--secondary-color); margin-right: 20px;">Contact</a>
+    <a href="sui-juris.html" style="color: var(--secondary-color); margin-right: 20px;">Sui Juris</a>
+    <a href="ask-sage.html" style="color: var(--secondary-color); margin-right: 20px;">Ask Sage</a>
+    <a href="court-prep.html" style="color: var(--secondary-color);">Court Prep</a>
 </div>
+
 
 <img src="logo.png" alt="Sovereign Academy Logo" style="width: 150px;">
 
