--- a/sui-juris.html
+++ b/sui-juris.html
@@ -25,6 +25,21 @@
 </div>
 
 <h1>Sui Juris & Pro Se Center</h1>
+    <section>
+  <h2>What is Sui Juris?</h2>
+  <p>Sui Juris means representing yourself in court without an attorney. It empowers individuals to assert their legal rights independently, using their own knowledge and preparation.</p>
+
+  <h2>Self-Representation Resources:</h2>
+  <ul>
+    <li>How to File a Motion (coming soon!)</li>
+    <li>Sample Motion Template (coming soon!)</li>
+    <li>Steps to Prepare for Your Hearing</li>
+  </ul>
+
+  <h2>Downloadable Templates (Coming Soon)</h2>
+  <p>We are building a library of free templates you can edit and use for your filings. Stay tuned!</p>
+</section>
+
 <p>Learn how to represent yourself in court, file motions, and assert your rights as a sovereign individual. Resources and downloadable templates coming soon.</p>
 
 <footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
