--- a/ask-sage.htm
+++ b/ask-sage.htm
@@ -25,6 +25,18 @@
 </div>
 
 <h1>Ask Sage</h1>
+    <section>
+  <h2>Frequently Asked Questions</h2>
+  <ul>
+    <li><strong>How do I file a Motion?</strong> — Start by identifying the type of motion you need. Prepare a document stating your request, include supporting facts, and file it with the court clerk.</li>
+    <li><strong>How should I address the judge?</strong> — Always address the judge as \"Your Honor.\" Speak respectfully and clearly.</li>
+    <li><strong>What if I can’t afford filing fees?</strong> — You may file a Fee Waiver Request or "In Forma Pauperis" form asking the court to waive fees due to hardship.</li>
+  </ul>
+
+  <h2>Have a Question?</h2>
+  <p>Contact Sovereign Academy through our support email or visit the Contact page to ask a question directly. (Coming soon: live Ask Sage chat!)</p>
+</section>
+
 <p>Need legal guidance or help? This is your Sovereign AI assistant. Future plans include chat integration, but for now, browse our Frequently Asked Questions or contact us for answers.</p>
 
 <footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
