--- a/court-prep.html
+++ b/court-prep.html
@@ -25,6 +25,25 @@
 </div>
 
 <h1>Court Prep</h1>
+    <section>
+  <h2>Prepare Before Court</h2>
+  <ul>
+    <li>Gather and organize all evidence and paperwork.</li>
+    <li>Prepare a short outline of key points you want to make.</li>
+    <li>Practice speaking clearly and calmly.</li>
+  </ul>
+
+  <h2>Day of Court Checklist</h2>
+  <ul>
+    <li>Dress professionally and arrive early.</li>
+    <li>Bring all necessary documents, copies, and notes.</li>
+    <li>Listen carefully and address the judge respectfully.</li>
+  </ul>
+
+  <h2>After Court</h2>
+  <p>Follow up on any actions required by the court. Always request a copy of any court orders issued.</p>
+</section>
+
 <p>Prepare for your day in court with confidence. Coming soon: printable checklists, what to bring, what to say, and how to act. Stay tuned as we continue building this section.</p>
 
 <footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
