--- a/sui-juris.html
+++ b/sui-juris.html
@@ -36,8 +36,10 @@
     <li>Steps to Prepare for Your Hearing</li>
   </ul>
 
-  <h2>Downloadable Templates (Coming Soon)</h2>
-  <p>We are building a library of free templates you can edit and use for your filings. Stay tuned!</p>
+ <h2>Downloadable Templates</h2>
+<a href="motion-to-dismiss.docx" download>Download Motion to Dismiss Template (DOC)</a><br>
+<a href="notice-of-appearance.docx" download>Download Notice of Appearance Template (DOC)</a>
+
 </section>
 
 <p>Learn how to represent yourself in court, file motions, and assert your rights as a sovereign individual. Resources and downloadable templates coming soon.</p>
