--- a/court-prep.html
+++ b/court-prep.html
@@ -34,6 +34,9 @@
   </ul>
 
   <h2>Day of Court Checklist</h2>
+        <h2>Printable Court Checklist</h2>
+<a href="court-prep-checklist.pdf" download>Download Court Day Checklist (PDF)</a>
+
   <ul>
     <li>Dress professionally and arrive early.</li>
     <li>Bring all necessary documents, copies, and notes.</li>
