--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,19 @@
     <p>We would love to hear from you! Please reach out via email or visit us at our headquarters. Sovereign Academy is here to help you on your path to sovereignty and knowledge.</p>
 
     <p>Learn more about Sovereign Academy and our mission.</p>
-    <button class="button">Contact Us</button>
+    <form action="https://formspree.io/f/xeogkwoe" method="POST">
+  <label for="name">Name:</label><br>
+  <input type="text" name="name" id="name" required><br><br>
+
+  <label for="email">Email:</label><br>
+  <input type="email" name="_replyto" id="email" required><br><br>
+
+  <label for="message">Message:</label><br>
+  <textarea name="message" id="message" rows="5" required></textarea><br><br>
+
+  <button type="submit">Send Message</button>
+</form>
+
 </body>
 </html>
 
