--- a/ask-sage.htm
+++ b/ask-sage.htm
@@ -11,35 +11,24 @@
         }
         body { background-color: var(--accent-color); color: var(--primary-color); font-family: Arial, sans-serif; padding: 20px; }
         .navbar { background-color: var(--primary-color); color: var(--secondary-color); padding: 1rem; font-size: 24px; }
-    </style>
-</head>
-<body>
+<h1>Ask Sage - Smart FAQ</h1>
 
-<div class="navbar">
-    <a href="index.html" style="color: var(--secondary-color); margin-right: 20px;">Home</a>
-    <a href="about.html" style="color: var(--secondary-color); margin-right: 20px;">About</a>
-    <a href="contact.html" style="color: var(--secondary-color); margin-right: 20px;">Contact</a>
-    <a href="sui-juris.html" style="color: var(--secondary-color); margin-right: 20px;">Sui Juris</a>
-    <a href="ask-sage.html" style="color: var(--secondary-color); margin-right: 20px;">Ask Sage</a>
-    <a href="court-prep.html" style="color: var(--secondary-color);">Court Prep</a>
-</div>
+<h2>How do I file a motion?</h2>
+<p>You can use the templates provided on the Sui Juris page and follow court guidelines to submit motions.</p>
 
-<h1>Ask Sage</h1>
-    <section>
-  <h2>Frequently Asked Questions</h2>
-  <ul>
-    <li><strong>How do I file a Motion?</strong> — Start by identifying the type of motion you need. Prepare a document stating your request, include supporting facts, and file it with the court clerk.</li>
-    <li><strong>How should I address the judge?</strong> — Always address the judge as \"Your Honor.\" Speak respectfully and clearly.</li>
-    <li><strong>What if I can’t afford filing fees?</strong> — You may file a Fee Waiver Request or "In Forma Pauperis" form asking the court to waive fees due to hardship.</li>
-  </ul>
+<h2>What is Pro Se or Sui Juris?</h2>
+<p>It means representing yourself without an attorney. See our Sui Juris Center for guides and templates.</p>
 
-  <h2>Have a Question?</h2>
-  <p>Contact Sovereign Academy through our support email or visit the Contact page to ask a question directly. (Coming soon: live Ask Sage chat!)</p>
-</section>
+<h2>How do I prepare for court?</h2>
+<p>Visit our Court Prep Center for printable checklists and preparation guides.</p>
 
-<p>Need legal guidance or help? This is your Sovereign AI assistant. Future plans include chat integration, but for now, browse our Frequently Asked Questions or contact us for answers.</p>
+<h2>Need personal help?</h2>
+<p>Use our Contact page to reach out and get guidance.</p>
 
 <footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
+    &copy; 2025 Sovereign Academy. All rights reserved.
+</footer>
+
     &copy; 2025 Sovereign Academy. All rights reserved.
 </footer>
 
