--- a/community.html
+++ b/community.html
@@ -23,7 +23,7 @@
   <main>
     <section>
       <h2>Join the Sovereign Directory</h2>
-      <form action="https://formspree.io/f/your-form-id" method="POST">
+      <form action="https://formspree.io/f/xeogkwoe" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
