--- a/about.html
+++ b/about.html
@@ -114,6 +114,19 @@ s0.parentNode.insertBefore(s1,s0);
 
     <p>Learn more about Sovereign Academy and our mission.</p>
     <a href="contact.html" class="button">Contact Us</a>
+<!-- Start of Tawk.to Script -->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/681d203afe55ac190d5636e6/1iqosbpkt';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!-- End of Tawk.to Script -->
 
 </body>
 </html>
