--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,9 @@ s0.parentNode.insertBefore(s1,s0);
 
     <p>Learn more about Sovereign Academy and our mission.</p>
     <form action="https://formspree.io/f/xeogkwoe" method="POST">
+  <input type="hidden" name="_redirect" value="https://integrity-exists.github.io/gina-app/success.html" />
+
+
   <label for="name">Name:</label><br>
   <input type="text" name="name" id="name" required><br><br>
 
