--- a/success.html
+++ b/success.html
@@ -29,5 +29,17 @@
     })();
   </script>
   <!-- End of Tawk.to Script -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<script>
+  // Trigger confetti once on load
+  window.onload = () => {
+    confetti({
+      particleCount: 100,
+      spread: 70,
+      origin: { y: 0.6 }
+    });
+  };
+</script>
+
 </body>
 </html>
