--- a/success.html
+++ b/success.html
@@ -40,6 +40,11 @@
     });
   };
 </script>
+<script>
+  setTimeout(() => {
+    window.location.href = "index.html";
+  }, 5000);
+</script>
 
 </body>
 </html>
