--- a/success.html
+++ b/success.html
@@ -16,6 +16,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thank You - Sovereign Academy</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.fade-in {
+  animation: fadeIn 2s ease-in;
+}
+</style>
+
 </head>
 <body>
   <div class="navbar">Sovereign Academy</div>
