--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
     <link rel="manifest" href="manifest.json">
 
     <style>
+        .testimonials {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.carousel {
+  position: relative;
+  height: 60px;
+  overflow: hidden;
+}
+
+.quote {
+  animation: slide 12s infinite;
+  position: absolute;
+  width: 100%;
+  opacity: 0;
+  font-size: 1.2em;
+  transition: opacity 1s ease-in-out;
+}
+
+.quote:nth-child(1) { animation-delay: 0s; }
+.quote:nth-child(2) { animation-delay: 4s; }
+.quote:nth-child(3) { animation-delay: 8s; }
+
+@keyframes slide {
+  0% { opacity: 0; }
+  10% { opacity: 1; }
+  30% { opacity: 1; }
+  40% { opacity: 0; }
+  100% { opacity: 0; }
+}
+
         :root {
             --primary-color: #2C3E50;   /* Royal Blue */
             --secondary-color: #F4D03F; /* Light Gold */
@@ -51,6 +83,15 @@
     <div class="navbar">Sovereign Academy - Home</div>
     <h1>Welcome to Sovereign Academy!</h1>
     <p>This is the homepage.</p>
+    <section class="testimonials">
+  <h2>What People Are Saying</h2>
+  <div class="carousel">
+    <div class="quote">"I never thought I could file my own motion — until now!" – Maria T.</div>
+    <div class="quote">"The Court Prep checklist gave me confidence!" – Jamal W.</div>
+    <div class="quote">"Sovereign Academy is a lighthouse in legal fog." – Leah R.</div>
+  </div>
+</section>
+
     <button class="button">Learn More</button>
     <footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
     &copy; 2025 Sovereign Academy. All rights reserved.
