--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- End of Tawk.to Script -->
 
 </body>
+    <section style="text-align: center; margin: 50px 0;">
+  <h2>🛡️ DSS Defense Center</h2>
+  <p>Have you been wronged by DSS? Speak up. Get support. Fight back.</p>
+  <a href="dss-defense.html" class="button">Go to DSS Defense</a>
+</section>
+
    </footer>
 
 </html>
