--- a/dss-defense.html
+++ b/dss-defense.html
@@ -6,6 +6,42 @@
   <title>DSS Defense Center - Sovereign Academy</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
+    <style>
+  .button {
+    display: inline-block;
+    padding: 12px 24px;
+    margin: 10px;
+    background-color: #2C3E50;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 1em;
+  }
+
+  .button:hover {
+    background-color: #1a242f;
+  }
+
+  .links {
+    margin-top: 30px;
+  }
+</style>
+
+    <body>
+  <h1>🛡️ DSS Defense Center</h1>
+  <p>
+    This is your hub to push back. Whether you're facing unfair allegations, custody interference, or just need guidance on DSS overreach, you've come to the right place.
+  </p>
+
+  <div class="links">
+    <a href="dss-strategy-tools.html" class="button">📄 Build Your Strategy Plan</a>
+    <a href="dss-thank-you.html" class="button">💬 Submit Your Story</a>
+    <a href="contact.html" class="button">📫 Contact Sovereign Academy</a>
+    <a href="index.html" class="button">🏠 Return Home</a>
+  </div>
+</body>
+
     body {
       background-color: #f4f4f4;
       font-family: Arial, sans-serif;
