--- a/dss-defense.html
+++ b/dss-defense.html
@@ -40,6 +40,58 @@
     <a href="contact.html" class="button">📫 Contact Sovereign Academy</a>
     <a href="index.html" class="button">🏠 Return Home</a>
   </div>
+      <section class="resource-grid">
+  <h2>⚖️ DSS Defense Resources</h2>
+  <div class="grid">
+    <a href="dss-strategy-tools.html" class="card">
+      <h3>🔬 Strategy Builder</h3>
+      <p>Build your custom DSS plan and export to PDF.</p>
+    </a>
+    <a href="dss-thank-you.html" class="card">
+      <h3>📩 Submit Your Story</h3>
+      <p>Help others by sharing your experience and insight.</p>
+    </a>
+    <a href="court-prep-checklist.pdf" class="card">
+      <h3>🔢 Court Prep Checklist</h3>
+      <p>Everything you need to bring to your next hearing.</p>
+    </a>
+    <a href="motion-to-dismiss.docx" class="card">
+      <h3>✍️ Motion to Dismiss</h3>
+      <p>Download a sample motion you can edit and file.</p>
+    </a>
+  </div>
+</section>
+
+<style>
+  .resource-grid {
+    padding: 40px;
+    background-color: #fff;
+    text-align: center;
+  }
+  .resource-grid .grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  .resource-grid .card {
+    display: block;
+    background-color: #f4f4f4;
+    padding: 20px;
+    width: 250px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #2C3E50;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    transition: transform 0.2s ease;
+  }
+  .resource-grid .card:hover {
+    transform: translateY(-5px);
+    background-color: #e9ecef;
+  }
+</style>
+
 </body>
 
     body {
