--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <a href="sui-juris.html" style="color: var(--secondary-color); margin-right: 20px;">Sui Juris</a>
     <a href="ask-sage.html" style="color: var(--secondary-color); margin-right: 20px;">Ask Sage</a>
     <a href="court-prep.html" style="color: var(--secondary-color);">Court Prep</a>
+    <a href="printable-resources.html">Printable Resources</a>
+
 </div>
 
 
