--- a/ask-sage.htm
+++ b/ask-sage.htm
@@ -1,49 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Sovereign Academy - Ask Sage</title>
-    <link rel="manifest" href="manifest.json">
-    <style>
-        :root {
-            --primary-color: #2C3E50;
-            --secondary-color: #F4D03F;
-            --accent-color: #ECF0F1;
-        }
-        body { background-color: var(--accent-color); color: var(--primary-color); font-family: Arial, sans-serif; padding: 20px; }
-        .navbar { background-color: var(--primary-color); color: var(--secondary-color); padding: 1rem; font-size: 24px; }
-<h1>Ask Sage - Smart FAQ</h1>
+  <meta charset="UTF-8">
+  <title>Sovereign Academy - Ask Sage</title>
+  <link rel="manifest" href="manifest.json">
+  <style>
+    :root {
+      --primary-color: #2C3E50;
+      --secondary-color: #F4D03F;
+      --accent-color: #ECF0F1;
+    }
+    body {
+      background-color: var(--accent-color);
+      color: var(--primary-color);
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    .navbar {
+      background-color: var(--primary-color);
+      color: var(--secondary-color);
+      padding: 1rem;
+      font-size: 24px;
+    }
+    h1 {
+      color: var(--primary-color);
+    }
+    a {
+      color: var(--primary-color);
+    }
+  </style>
+</head>
+<body>
 
-<h2>How do I file a motion?</h2>
+<h1>Ask Sage – Smart Legal Help 24/7</h1>
+
+<p><strong>Need help navigating court, DSS investigations, or your legal rights?</strong> You're not alone. <strong>Sage</strong> is your built-in AI guide — trained by Gina to help you understand your options, prepare documents, and take your power back. Ask anything, 24/7.</p>
+
+<h2>🧾 How do I file a motion?</h2>
 <p>You can use the templates provided on the Sui Juris page and follow court guidelines to submit motions.</p>
 
-<h2>What is Pro Se or Sui Juris?</h2>
+<h2>⚖️ What is Pro Se or Sui Juris?</h2>
 <p>It means representing yourself without an attorney. See our Sui Juris Center for guides and templates.</p>
 
-<h2>How do I prepare for court?</h2>
+<h2>🧠 How do I prepare for court?</h2>
 <p>Visit our Court Prep Center for printable checklists and preparation guides.</p>
 
-<h2>Need personal help?</h2>
-<p>Use our Contact page to reach out and get guidance.</p>
+<p><a href="index.html">⬅️ Return to Home</a></p>
 
-<footer style="text-align: center; margin-top: 40px; color: var(--primary-color);">
-    &copy; 2025 Sovereign Academy. All rights reserved.
-</footer>
-
-    &copy; 2025 Sovereign Academy. All rights reserved.
-</footer>
-<!--Start of Tawk.to Script-->
+<!-- Start of Tawk.to Script -->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 s1.async=true;
-s1.src='https://embed.tawk.to/681d203afe55ac190d5636e6/1iqosbpkt';
+s1.src='https://embed.tawk.to/68d1203afe55ac190d5636e6/1i1qospbkt';
 s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
-<!--End of Tawk.to Script-->
+<!-- End of Tawk.to Script -->
 
 </body>
 </html>
