--- a/ask-sage.htm
+++ b/ask-sage.htm
@@ -44,6 +44,22 @@
 
 <h2>🧠 How do I prepare for court?</h2>
 <p>Visit our Court Prep Center for printable checklists and preparation guides.</p>
+  <h2>💬 Ask Sage a Question</h2>
+<p>Fill out the form below and Sage will respond to your inbox — no lawyers, no nonsense.</p>
+
+<form action="https://formspree.io/f/xeogkwoe" method="POST">
+  <label for="name">Your Name:</label><br>
+  <input type="text" name="name" id="name" required><br><br>
+
+  <label for="email">Your Email:</label><br>
+  <input type="email" name="_replyto" id="email" required><br><br>
+
+  <label for="question">Your Question:</label><br>
+  <textarea name="message" id="question" rows="5" required></textarea><br><br>
+
+  <button type="submit">Submit Question</button>
+</form>
+
 
 <p><a href="index.html">⬅️ Return to Home</a></p>
 
