--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ s0.parentNode.insertBefore(s1,s0);
     <section style="text-align: center; margin: 50px 0;">
   <h2>🛡️ DSS Defense Center</h2>
   <p>Have you been wronged by DSS? Speak up. Get support. Fight back.</p>
-  <a href="dss-stratagy-tools.html" class="button">Go to DSS Defense</a>
+  <a href="dss-strategy-tools.html" class="button">Go to DSS Defense</a>
+
 
 </section>
 
