--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
             padding: 20px;
         }
 <div class="navbar">
-    <a href="index.html" style="color: var(--secondary-color); margin-right: 20px;">Home</a>
-    <a href="about.html" style="color: var(--secondary-color); margin-right: 20px;">About</a>
-    <a href="contact.html" style="color: var(--secondary-color); margin-right: 20px;">Contact</a>
-    <a href="sui-juris.html" style="color: var(--secondary-color); margin-right: 20px;">Sui Juris</a>
-    <a href="ask-sage.html" style="color: var(--secondary-color); margin-right: 20px;">Ask Sage</a>
-    <a href="court-prep.html" style="color: var(--secondary-color);">Court Prep</a>
-    <a href="printable-resources.html">Printable Resources</a>
-
+  <a href="index.html" style="color: var(--secondary-color); margin-right: 20px;">Home</a>
+  <a href="about.html" style="color: var(--secondary-color); margin-right: 20px;">About</a>
+  <a href="contact.html" style="color: var(--secondary-color); margin-right: 20px;">Contact</a>
+  <a href="ask-sage.html" style="color: var(--secondary-color); margin-right: 20px;">Ask Sage</a>
+  <a href="court-prep.html" style="color: var(--secondary-color); margin-right: 20px;">Court Prep</a>
+  <a href="dss-defense.html" style="color: var(--secondary-color); margin-right: 20px;">DSS Defense</a>
+  <a href="dss-strategy-tools.html" style="color: var(--secondary-color); margin-right: 20px;">Strategy Tools</a>
+  <a href="printable-resources.html" style="color: var(--secondary-color); margin-right: 20px;">Printable Resources</a>
 </div>
-
 
 <img src="logo.png" alt="Sovereign Academy Logo" style="width: 150px;">
 
