--- a/dss-strategy-tools.html
+++ b/dss-strategy-tools.html
@@ -105,6 +105,28 @@
       link.click();
 
       document.getElementById("pdfStatus").textContent = "✅ Your strategy plan is downloading!";
+      <hr>
+
+<h2>🛑 What to Do If DSS Shows Up</h2>
+<ol>
+  <li><strong>Stay calm</strong> and do not allow entry without a warrant.</li>
+  <li><strong>Ask for identification</strong> and request their business card.</li>
+  <li><strong>Do not answer questions</strong> without legal representation.</li>
+  <li><strong>Document everything</strong>: who came, what time, what was said.</li>
+  <li><strong>Politely refuse entry</strong> unless they present a valid court order or there’s a clear emergency.</li>
+</ol>
+
+<hr>
+
+<h2>📄 Tools You Can Use</h2>
+<ul>
+  <li><a href="motion-to-dismiss.docx" download>📄 Motion to Dismiss Template (DOCX)</a></li>
+  <li><a href="notice-of-appearance.docx" download>📝 Notice of Appearance (DOCX)</a></li>
+  <li><a href="court-prep-checklist.pdf" download>🧾 Court Prep Checklist (PDF)</a></li>
+</ul>
+
+<p><a href="printable-resources.html">🖨️ View More Printable Legal Resources</a></p>
+
     });
   </script>
 </body>
