--- a/dss-strategy-tools.html
+++ b/dss-strategy-tools.html
@@ -107,7 +107,13 @@
       document.getElementById("pdfStatus").textContent = "✅ Your strategy plan is downloading!";
       <hr>
 
-<h2>🛑 What to Do If DSS Shows Up</h2>
+    });
+  </script>
+  </script>
+
+<hr>
+
+<h2> What to Do If DSS Shows Up</h2>
 <ol>
   <li><strong>Stay calm</strong> and do not allow entry without a warrant.</li>
   <li><strong>Ask for identification</strong> and request their business card.</li>
@@ -127,7 +133,8 @@
 
 <p><a href="printable-resources.html">🖨️ View More Printable Legal Resources</a></p>
 
-    });
-  </script>
+</body>
+</html>
+
 </body>
 </html>
