--- a/dss-strategy-tools.html
+++ b/dss-strategy-tools.html
@@ -105,10 +105,13 @@
       link.click();
 
       document.getElementById("pdfStatus").textContent = "✅ Your strategy plan is downloading!";
-      <hr>
+      document.getElementById("pdfStatus").textContent = "✅ Your strategy plan is ready to download!";
+})();
+</script>
 
-    });
-  </script>
+<!-- Now back in HTML -->
+<hr>
+
   </script>
 
 <hr>
