--- a/dss-strategy-tools.html
+++ b/dss-strategy-tools.html
@@ -134,6 +134,29 @@
 </ul>
 
 <p><a href="printable-resources.html">🖨️ View More Printable Legal Resources</a></p>
+<hr>
+
+<h2>⚖️ Know Your Rights</h2>
+<p>You don’t need a law degree to know how to protect yourself. Start here:</p>
+
+<ul>
+  <li><strong>📜 You have the right to remain silent.</strong><br>
+      You do NOT have to answer questions from DSS or sign anything without a lawyer.</li>
+
+  <li><strong>🏠 You have the right to privacy.</strong><br>
+      DSS cannot enter your home without a court order or clear emergency.</li>
+
+  <li><strong>👨‍⚖️ You have the right to legal representation.</strong><br>
+      If you’re being investigated or brought to court, you can ask for a public defender or legal aid.</li>
+
+  <li><strong>📸 You have the right to record.</strong><br>
+      In Virginia, you can legally record conversations you are a part of — protect yourself by documenting.</li>
+
+  <li><strong>🛑 You can say NO.</strong><br>
+      You are allowed to refuse drug tests, interviews, or home inspections unless ordered by a judge.</li>
+</ul>
+
+<p><em>When in doubt, ask Sage. It’s better to be informed than intimidated.</em></p>
 
 </body>
 </html>
