--- a/ask-sage.html
+++ b/ask-sage.html
@@ -32,9 +32,8 @@
 </head>
 <body>
 
-<h1>Ask Sage – Smart Legal Help 24/7</h1>
+<p><strong>Need help navigating court, DSS, housing problems, custody disputes, or criminal charges?</strong> You're not alone. <strong>Ask Sage</strong> is your built-in AI companion — trained by Gina to help you understand your options, prepare documents, and take your power back. Ask anything. Any time.</p>
 
-<p><strong>Need help navigating court, DSS investigations, or your legal rights?</strong> You're not alone. <strong>Sage</strong> is your built-in AI guide — trained by Gina to help you understand your options, prepare documents, and take your power back. Ask anything, 24/7.</p>
 
 <h2>🧾 How do I file a motion?</h2>
 <p>You can use the templates provided on the Sui Juris page and follow court guidelines to submit motions.</p>
