--- a/ask-sage.html
+++ b/ask-sage.html
@@ -58,6 +58,18 @@
 
   <button type="submit">Submit Question</button>
 </form>
+<h2>🔍 What Can I Ask Sage?</h2>
+<ul>
+  <li>📁 “How do I file a custody modification?”</li>
+  <li>🏠 “What are my rights if my landlord shuts off the water?”</li>
+  <li>⚖️ “What does a Motion to Dismiss look like?”</li>
+  <li>📜 “Can I subpoena DSS records?”</li>
+  <li>🔫 “How do I get my gun rights back after a felony?”</li>
+  <li>🚔 “Do I have to let police search my home?”</li>
+  <li>🧠 “What’s the difference between Pro Se and Sui Juris?”</li>
+</ul>
+
+<p><em>Don’t see your issue? Type it in the form — Sage will figure it out with you.</em></p>
 
 
 <p><a href="index.html">⬅️ Return to Home</a></p>
