--- a/sage-chatbot.html
+++ b/sage-chatbot.html
@@ -112,4 +112,6 @@
     if (msg.toLowerCase().includes("custody")) return "You’ve got rights — has there been a court order or just threats?";
     return "Let’s break this down. Start with the facts and I’ll guide you from there.";
   }
+  const endpoint = 'https://ask-sage-g5hds2ybd-gina-lopezs-projects.vercel.app/api/chat';
+
 </script>
