--- a/sage-chatbot.html
+++ b/sage-chatbot.html
@@ -105,12 +105,13 @@
     }, 600);
   };
 
-  function getSageReply(msg) {
-    // Placeholder: respond confidently like a legal street-smart coach
-    if (msg.toLowerCase().includes("dss")) return "First thing, don’t panic. Did they have a warrant or court order?";
-    if (msg.toLowerCase().includes("eviction")) return "They can't just boot you. Let’s talk lease, notice, and court papers.";
-    if (msg.toLowerCase().includes("custody")) return "You’ve got rights — has there been a court order or just threats?";
-    return "Let’s break this down. Start with the facts and I’ll guide you from there.";
+  <script>
+  function selectTopic(topic) {
+    localStorage.setItem('userTopic', topic);
+    alert(`Topic selected: ${topic}. Sage will tailor your help.`);
+  }
+</script>
+
   }
   const endpoint = 'https://ask-sage-g5hds2ybd-gina-lopezs-projects.vercel.app/api/chat';
 
