--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@ s0.parentNode.insertBefore(s1,s0);
   <button onclick="setTopic('records')">📂 Criminal Records & Rights</button>
   <button onclick="setTopic('dss')">🧾 CPS & DSS Defense</button>
   <button onclick="setTopic('liberties')">⚖️ Civil Liberties & Due Process</button>
+  <button onclick="setTopic('estate')">🏛️ Estate & Probate</button>
+          
 </div>
 
 <script>
